fixed the visible and invisible favorite buttons

--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
-
-
-* 
-{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body 
-{
+body {
     background-color: #d9dcd6;
 }
-/* Header with my name, and nav bar justified to the right */
-.header 
-{
+
+h1{
+    font-weight: bolder;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    position: relative;
+    font-size: 48px; 
+}
+
+.header {
     width:100%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background: linear-gradient(315deg, #0abcf9 0%, #2c69d1 74%);
@@ -21,36 +23,12 @@ body
     position: absolute;
 }
 
-.header h1
-{
-    margin-left:10px;
-    display: flex;
-    flex-direction: row;
-    font-size: 48px;
-}
-
-/*Absolutely positioned subheader text at bottom right of the subheader container */
-
-body 
-{
-    background-color: #d9dcd6;
-}
-
-.top-container
-{
-    width:100%;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    background-color: lightgray;
-}
-
-.active-cats
-{
-    position: relative;
-    display: flex;
-    border: 2px solid black;
-    height: 50vh;
+.bottom-container {
+      width:100%;
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      background-color: lightgray;
 }
 
 .search-field
@@ -60,16 +38,13 @@ body
     flex-direction: row;
 }
 
-.search-results
-{
+.search-results {
     height: 50vh;
     border: 2px solid black;
     justify-content: center;
-   
-    
 }
 
-.favorite-runners{
+.favorite-runners {
     position: relative;
     display: flex;
     border: 2px solid black;
@@ -99,53 +74,20 @@ body
     display: flex;
 }
 
-h1{
-    font-weight: bolder;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    position: relative;
-    font-size: 48px; 
-}
-.subhead-text
-  {
+.subhead-text {
       position:absolute;
       bottom: 20px;
       right: 10px;
       font-weight: bold;
       font-style: italic;
       text-shadow: 12px, 12px, gray;
-  }
+}
 
-.bottom-container
-  {
-      width:100%;
-      display: flex;
-      flex-direction: row;
-      position: relative;
-      background-color: lightgray;
-  }
-
-  .score-box
-{
+.score-box {
     position: relative;
     display: flex;
     border: 2px solid black;
     height: 20vh
-}
-
-.available-keys
-{
-    height: 30vh;
-    border: 2px solid black;
-    justify-content: center;   
-}
-
-.vowel-container
-{
-    height: 20vh;
-    border: 2px solid black;
-    justify-content: center;
-
-    
 }
 
 .followLinkBtn {
